1999-10-24  Gary Houston  <ghouston@freewire.co.uk>

	* Move the responsibility for resetting port buffers from the
	caller of the ptob seek procedure to the implementation.  This
	gives more control in general to the ptob seek: in particular the
	change of 1999-10-20 can be made to work without breaking seek on
	string ports.  There's a comment in NEWS about upgrading port
	types.
	
	* ports.c (scm_seek): don't reset the port buffers here.

	* fports.c (fport_seek): reset the buffers, except for the
	0 SEEK_CUR case.

	* strports.c (st_end_input): (bug fix): decrement pt->read_pos by
	offset.  check that it's not less than read_buf.
	(st_seek): reset the buffers first, unless it's the 0 SEEK_CUR
	case and currently reading.

1999-10-20  Gary Houston  <ghouston@freewire.co.uk>

	* ports.c (scm_seek): Add a special case for SEEK_CUR, offset 0,
	so that unread chars are not needlessly discarded.  (thanks to
	Roland Orre).

1999-10-18  Gary Houston  <ghouston@freewire.co.uk>

	* fports.c (scm_fdes_to_port): always set rw_random if the fdes is
	random access.  rw_active needs to be maintained even for single
	directional ports, otherwise scm_seek and probably other things are
	broken.  (thanks to Roland Orre).

	* strports.c (scm_mkstrport): set rw_random to 1 unconditionally.

	* ports.c (scm_add_to_port_table): initialise rw_random to 0.

	* ports.h (scm_port): change the comments on rw_random and rw_active.

1999-10-11  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* ioext.c: Added #include "feature.h".

	These changes turns `delay' into a memoizing macro.  This is
	because it may be expanded before evaluation if it occurs at the
	beginning of a body.  (Thanks to Lauri Alanko.)
	
	* eval.c, eval.h (scm_sym_delay): New global symbol.

	* tags.h (SCM_IM_DELAY): New immediate symbol.

	* print.c (scm_isymnames): Printed representation.

	* eval.c (unmemocopy, SCM_CEVAL): Handle SCM_IM_DELAY.
	(scm_m_delay): Turned into a memoizing macro.
